Git Deployment Assignment/force-app/main/default/objects/Personal_Details__c/Personal_Details__c.object-meta.xml
<CustomObject>
    <label>Personal Details</label>
    <nameField>
        <label>Personal Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>