Git Deployment Assignment/force-app/main/default/objects/Personal_Details__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Personal Details</relationshipLabel>
    <relationshipName>Personal_Details</relationshipName>
    <type>Lookup</type>
</CustomField>