Git Deployment Assignment/force-app/main/default/objects/Personal_Details__c/fields/Person_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Person_Employee_ID__c</fullName>
    <label>Person Employee ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>