Git Deployment Assignment/force-app/main/default/objects/Personal_Details__c/fields/Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Person_Phone__c</fullName>
    <label>Person Phone</label>
    <type>Phone</type>
</CustomField>